[tool.poetry]
name = "userhub"
version = "0.1.0"
description = ""
authors = ["takelele <work.mnikulin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = {version = ">=2.0.0,<3.0.0", extras = ["uvicorn"]}
uvicorn = "^0.34.0"
advanced-alchemy = "^1.0.2"
python-dotenv = "1.0.0"
litestar-asyncpg = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
