[tool.poetry]
name = "userhub"
version = "0.1.0"
description = ""
authors = ["takelele <work.mnikulin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1"
litestar = {version = "^2", extras = ["standard"]}
litestar-granian = "^0"
litestar-asyncpg = "^0"
advanced-alchemy = "^0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
